k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-g20
  namespace: p-g20
  labels:
    app.kubernetes.io/name: p-g20
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: p-g20
  template:
    metadata:
      labels:
        app.kubernetes.io/name: p-g20
    spec:
      containers:
        - name: web
          image: ghcr.io/sajiv8/p-g20:deploy-1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
