k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-g20
  namespace: p-g20
  labels:
    app.kubernetes.io/name: p-g20
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: p-g20
  ports:
    - name: http
      port: 80
      targetPort: 80
